--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,17 @@
   background-color: #fff; /* Optional: Customize background color */
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Add shadow for better visibility */
 }
+.nav-link{
+  font-family: "Poppins", serif;
+  color: #2cc6a0;
+  font-weight: 500;
+  font-size: 14px;
+}
+.nav-link .br{
+  color: #fff !important;
+}
+.w-10{
+  width: 35px;
+  text-align: center;
+  border: none;
+}
