--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 .g-class {
   /* background-color: #3f3f95 !important; */
-  background-image: url("https://media.gettyimages.com/id/184327474/photo/international-flags.jpg?s=612x612&w=gi&k=20&c=h6oER97WGp95YTfRso_TslvcoTsUeGuamj6WnQUayoA=") !important;
+  background-image: url("https://assets.weforum.org/article/image/large_BG0pfzM90_bsl3pWCLD2ZvvspIYSUwrhYlc5QyRO96E.jpg") !important;
   background-position: center !important;
   background-size: cover !important;
 }
